# sendit

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  OVERVIEW.md  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  colors.rs  events.rs  main.rs  transfer.rs  types.rs  zenoh_worker.rs
src/ui/: drop_zone.rs  help.rs  messages.rs  mod.rs  publish.rs  query.rs  settings.rs  topic_tree.rs
