[package]
name = "send-it"
version = "0.1.0"
edition = "2021"
description = "A drag-and-drop file transfer tool over Zenoh networks"
license = "Apache-2.0"
authors = ["SendIT Contributors"]
keywords = ["zenoh", "file-transfer", "gui", "peer-to-peer"]
categories = ["network-programming", "gui"]

[workspace]

[dependencies]
# Core Zenoh
zenoh = { version = "1.0", features = ["unstable"] }

# GUI Framework
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["glow"] }
egui_extras = { version = "0.29", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Hashing for deduplication
seahash = "4.1"

# Native file dialogs
rfd = "0.14"

[[bin]]
name = "send-it"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.bundle]
name = "sendit"
identifier = "com.sendit.app"
short_description = "Drag-and-drop file transfer over Zenoh networks"
long_description = "A simple, high-performance, drag-and-drop file transfer tool for local networks using Zenoh peer-to-peer networking."
copyright = "Apache-2.0"
category = "public.app-category.utilities"
osx_minimum_system_version = "11.0"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true